--- a/client/src/components/header/Header.css
+++ b/client/src/components/header/Header.css
@@ -64,7 +64,6 @@ header {
   cursor: pointer;
 }
 
-/* Responsive styles */
 @media (max-width: 768px) {
   .hamburger {
     display: block;
@@ -74,7 +73,8 @@ header {
     position: absolute;
     top: 100%;
     left: 0;
-    width: 100%;
+    width: 100vw;
+    box-sizing: border-box;
     background-color: #1E1E1E;
     flex-direction: column;
     align-items: flex-start;
